@@ -18,7 +18,6 @@ repositories {
 }
 
 applicationDefaultJvmArgs = ["-XX:+UnlockExperimentalVMOptions", "-Dorg.lwjgl.util.Debug=true", "-XX:+UseZGC", "-Xlog:gc"]
-// applicationDefaultJvmArgs = ["-XX:+UnlockExperimentalVMOptions", "-Dorg.lwjgl.util.Debug=true", "-XX:+UseShenandoahGC", "-Xlog:gc", "-XX:ShenandoahGCHeuristics=compact"]
 //applicationDefaultJvmArgs = ["-Dorg.lwjgl.util.Debug=true"]
 
 
@@ -49,4 +48,7 @@ dependencies {
     compile group: 'org.lwjgl', name: 'lwjgl-opengl', version:lwjglVersion, classifier:'natives-macos'
     compile group: 'org.lwjgl', name: 'lwjgl-glfw', version:lwjglVersion, classifier:'natives-macos'
     compile group: 'org.lwjgl', name: 'lwjgl-stb', version:lwjglVersion, classifier:'natives-macos'
+
+    compile 'org.json:json:20180813'
+
 }
